--- a/source/_patterns/01-elements/forms/selectbox.scss
+++ b/source/_patterns/01-elements/forms/selectbox.scss
@@ -1,10 +1,10 @@
 .selectbox {
   display: flex;
   flex-direction: column;
-  margin-bottom: $layout-spacing;
+  margin-bottom: $spacing-pixel-medium;
 
   &--label {
-    margin-bottom: $layout-spacing-small;
+    margin-bottom: $spacing-pixel-small;
   }
 
   &--select {
