--- a/source/_patterns/01-elements/forms/text-field.scss
+++ b/source/_patterns/01-elements/forms/text-field.scss
@@ -1,13 +1,13 @@
 .text-field {
   display: flex;
   flex-direction: column;
-  margin-bottom: $layout-spacing;
+  margin-bottom: $spacing-pixel-medium;;
 
   &--label {
-    margin-bottom: $layout-spacing-small;
+    margin-bottom: $spacing-pixel-small;
   }
 
   &--input {
-    padding: $layout-spacing-small;
+    padding: $spacing-pixel-small;
   }
 }
