--- a/source/_patterns/01-elements/image.scss
+++ b/source/_patterns/01-elements/image.scss
@@ -5,7 +5,7 @@ img {
   vertical-align: bottom;
 
   &.has-margin {
-    margin-top: $layout-spacing;
-    margin-bottom: $layout-spacing;
+    margin-top: $spacing-pixel-medium;
+    margin-bottom: $spacing-pixel-medium;
   }
 }
