--- a/source/_patterns/03-components/01-global/01-header.scss
+++ b/source/_patterns/03-components/01-global/01-header.scss
@@ -1,6 +1,6 @@
 .header {
   align-items: center;
-  background-color: $color-gray-lighter;
+  background-color: $color-white;
   display: flex;
   justify-content: center;
   height: 80px;
